--- a/app/styles/sass/blocks/_headings.scss
+++ b/app/styles/sass/blocks/_headings.scss
@@ -17,7 +17,7 @@ h3, .h3-title {
 }
 
 h1, h2, h3, h3-title, .h2-title, .h1-title {
-  color: #000000;
+  color: $black;
   text-transform: uppercase;
   margin: 0;
 }
