--- a/app/styles/sass/blocks/_form.scss
+++ b/app/styles/sass/blocks/_form.scss
@@ -29,7 +29,7 @@
     background-color: $white;
     font-size: 20px;
     text-transform: uppercase;
-    width: calc(100% - 60px);
+    width: 100%;
     outline: none;
     margin-bottom: 15px;
     border: 1px solid $transparent;
